update orbit controls

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 </div>
     
 <script src="js/three.min.js"></script>
-<script src="three.js-master/examples/js/controls/OrbitControls.js"></script>
+<script src="js/OrbitControls.js"></script>
     
 <script language="javascript" type="text/javascript" src="js/jquery-1.11.3.js"></script>
 <script language="javascript" type="text/javascript" src="js/jquery-ui.js"></script>
