--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Table</p>
         </div>
         <div class="build">
-            <a target="_blank" href="/cmuething.github.io/thesis/prototype_4/build.html"><p>Build</p></a>
+            <a target="_blank" href="/build.html"><p>Build</p></a>
         </div>
         <div class="list-toggle">
             <p>List</p>
