--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <p>Table</p>
         </div>
         <div class="build">
-            <a target="_blank" href="/cmuething.github.io/thesis/web_build"><p>Build</p></a>
+            <a target="_blank" href="/cmuething.github.io/build.html"><p>Build</p></a>
         </div>
         <div class="list-toggle">
             <p>List</p>
