--- a/build.html
+++ b/build.html
@@ -90,6 +90,16 @@
                 <h1>This photo is being used to design the public space below</h1>
             </li>
             <li class="other"><img class="other-img" src="images/photo_2.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_3.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_4.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_5.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_6.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_7.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_8.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_9.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_10.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_11.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_12.png"></li>
         </ul>
     </div>
         
