--- a/build.html
+++ b/build.html
@@ -100,6 +100,11 @@
             <li class="other"><img class="other-img" src="images/photo_10.png"></li>
             <li class="other"><img class="other-img" src="images/photo_11.png"></li>
             <li class="other"><img class="other-img" src="images/photo_12.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_13.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_14.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_15.png"></li>
+            <li class="other"><img class="other-img" src="images/photo_16.png"></li>
+            
         </ul>
     </div>
         
